# bottle-cap-detection

./: .gitignore  Dockerfile  README.md  model_development_analysis.ipynb  pyproject.toml  settings.yaml
.github/workflows/: ci.yml
bsort/: augment.py  data.py  main.py  tuner.py  viz.py
data/new_labels/: raw-250110_dc_s001_b4_1.txt  raw-250110_dc_s001_b4_2.txt  raw-250110_dc_s001_b4_3.txt  raw-250110_dc_s001_b5_5.txt
tests/: test_core.py
