[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsort"
version = "0.1.0"
description = "Bottle cap sorting model development and ML pipeline."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12.6"

dependencies = [
    "ultralytics",
    "opencv-python-headless",
    "typer",
    "pyyaml",
    "wandb",
    "numpy",
    "torch",
    "torchvision",
    "torchaudio",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "onnxruntime-gpu>=1.23.2",
    "pytest[dev]>=9.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pylint>=4.0.3",
    "black>=25.11.0",
    "isort"
]

[project.scripts]
bsort = "bsort.main:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["bsort"]

[tool.uv]
sources = { torch = { index = "pytorch" }, torchvision = { index = "pytorch" }, torchaudio = { index = "pytorch" } }

[tool.pylint.main]
extension-pkg-allow-list = ["cv2"]

[tool.pylint.messages_control]
disable = [
    "R0914",
    "R0915",
    "W1203",
]

[tool.pylint.typecheck]
generated-members = ["cv2.*"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true